[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/DigitalDisco.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://objects/Textbox.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0705882, 0.121569, 0.168627, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Textbox" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Textboxcontainer" type="MarginContainer" parent="."]
margin_left = 192.0
margin_top = 64.0
margin_right = 768.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Textboxcontainer"]
margin_right = 576.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Textboxcontainer"]
margin_right = 576.0
margin_bottom = 128.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="Textboxcontainer/MarginContainer"]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 560.0
margin_bottom = 112.0

[node name="HBoxContainer" type="HBoxContainer" parent="Textboxcontainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 560.0
margin_bottom = 112.0

[node name="StarSymbol" type="Label" parent="Textboxcontainer/MarginContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 32.0
rect_min_size = Vector2( 14, 32 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "*"

[node name="Label2" type="Label" parent="Textboxcontainer/MarginContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 522.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
autowrap = true
clip_text = true

[node name="End" type="Label" parent="Textboxcontainer/MarginContainer/HBoxContainer"]
margin_left = 526.0
margin_top = 64.0
margin_right = 544.0
margin_bottom = 96.0
rect_min_size = Vector2( 14, 32 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
text = "v"

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
